# PanFlow

./: .gitignore  README.md  config.json  design_doc.md  panflow.toml  pyproject.toml  run_panflow.py
.github/workflows/: release-windows.yml
examples/: business(1).md  business.docx  business.md  business.py  business_alt.py  design_doc.md  design_doc.py  design_doc_normal_type.py  design_doc_static_analysis.py  design_doc_test_case.py  design_doc_traceability_matrix.py
processors/: basic_table.py  design_doc.py  static_analysis_table.py  test_case_table.py  traceability_matrix_table.py
scripts/: build_app.py
src/panflow_service/: __init__.py  __main__.py  cli.py  companion.py  config.py  converter.py  document_processor.py  docx_postprocess.py  main.py  pandoc.py  registry.py  runtime_paths.py  word_to_markdown.py
src/panflow_service/renderers/: __init__.py  callout.py  metrics.py  testcase_table.py
templates/: reference.docx  ~$ference.docx
tests/: test_converter.py
