[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panflow-service"
version = "0.1.0"
description = "PanFlow markdown-to-Word conversion tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
panflow = "panflow_service.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
